Improve format